refactor CLI, improve agent UX